fix: overflow project and formation components

--- a/src/components/Formation/formation.css
+++ b/src/components/Formation/formation.css
@@ -51,8 +51,7 @@
   display: flex;
   gap: 0px;
 
-  min-height: 45rem;
-  height: 48rem;
+  height: 57rem;
 }
 
 .header {
@@ -93,12 +92,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 10px;
+  gap: 20px;
   padding: 2rem;
 
   max-width: 60rem;
   width: auto;
-  min-height: 48rem;
+  min-height: 100%;
+
+  overflow: hidden;
 }
 
 .formation-body header {
@@ -131,6 +132,8 @@ header .course-title h3 {
 }
 
 .formation-body .description {
+  height: 20rem;
+  overflow-y: auto;
   font-size: 1.8rem;
 }
 
